# cpp-configuration

./: .gitignore  CMakeLists.txt  MyConfigProject  config.yaml
src/bootstrap/: application.cpp
src/configuration/: BaseConfig.h
src/vision/: Position.h  VisionConfig.h
